--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@ section#skills {
 section#skills .container {
   width: 100% !important;
   max-width: 1140px;
+  overflow-x: hidden;
 }
 
 .skls_info {
@@ -449,7 +450,11 @@ h1.title {
     border-radius: 40px;
     /* padding: 50px 70px; */
     padding: 30px;
-    max-width: 1080px;
+    /* max-width: 1080px; */
+      width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+
 }
 
 p.crd_desc {
@@ -463,6 +468,7 @@ hr.divider {
     height: 3px;
     background-color: #FFC06D;
     opacity: .8;
+    width: 100%;
 }
 
 .apps {
