--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,6 +66,12 @@ img {
   }
 
   /* SKILLS */
+
+  section#skills .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
   .skls_card {
     padding: 20px;
     border-radius: 20px;
@@ -162,6 +168,8 @@ img {
   .num1,
   .num {
     gap: 40px;
+     flex-direction: column;
+    gap: 10px;
   }
 
   .apps {
@@ -227,7 +235,7 @@ img {
   }
 
   .skls_card {
-    padding: 40px;
+    padding: 20px !important;
     overflow: hidden;
   }
 
